TSC-015: Upgrade Spring & Java